# atopile-jlc-parts

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  dev-docker-compose.yml  docker-compose.yml  dockerfile.prd  manufacturers.parquet
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish-docker-image.2yml  publish-docker-image.yml
.sqlx/: query-15a57bddfd51efd90db2faadf705a2d0bd2ecc52ab38e2afbef5ad96f4e9f67b.json  query-1e49ad572eb24d7ca2ca48ff82625d3ef4fd83f41062f1ffb83daf55d84b7ce8.json  query-5b0fa3cd101504565f25195c60e754b28fd69155c3f91f9dc7283bf8cb3e598c.json  query-78fcc090ffc4d3bd62af783ceee202731a6daeaa6efc9f1334bf80e562c1c6d0.json  query-8c0ea99f878cea13e715876360c34a7d98576e78979e7a8115a836d4e0947e1c.json  query-8dd7272c4c2f5bc87acf5dbd4e8b0c78cd4f9973e57eb471eaf3703cf9d15dd3.json  query-91bdc0b9e2fe8525f7c4efcd6221ec739c5716d46c7279597f6a8fb8dd51e003.json  query-92e24c4392fa218c1d0b8906eac94697d11da7b81acdb527d9bc494777711c96.json  query-9cf7dc345d643d9ae0cd8b15534a4f9369c974ab0072aeb736773d664c36a92f.json  query-9db320d5201b361660dca48511c49ebfea3c28b3ddf181dbf6e1d80854d88efa.json  query-db235df4a0c0c9b864764647a04fe397fb6be576363390645053e5aa2bd964d8.json  query-e05e937186eaa830634bd8420f3e95af32fd16e1582098f3d5ab556e4186077e.json
src/: jlc_models.rs  jlc_part_finder.rs  jlc_router.rs  main.rs
src/jlc/: mod.rs
src/jlc/v1/: jlc_endpoint.rs  jlc_models.rs  jlc_part_finder.rs  mod.rs
src/jlc/v1/jlc_searchers/: jlc_find_capacitor.rs  jlc_find_inductor.rs  jlc_find_resistor.rs  mod.rs
src/jlc/v2/: mod.rs
src/jlc/v2/endpoints/: capacitor.rs  inductor.rs  mod.rs  resistor.rs
src/jlc/v2/models/: capacitor.rs  inductor.rs  mod.rs  resistor.rs
src/jlc/v2/services/: capacitor.rs  inductor.rs  mod.rs  resistor.rs
src/jlc_searchers/: jlc_find_capacitor.rs  jlc_find_inductor.rs  jlc_find_resistor.rs  mod.rs
